feat: Autorização das mensagens

--- a/sgea/login/templates/usuarios/home.html
+++ b/sgea/login/templates/usuarios/home.html
@@ -106,4 +106,13 @@
 
             </div>
     </form>
+
+    {% if toast_msg %}
+      <script>
+          window.toastMessage = "{{ toast_msg|escapejs }}";
+          window.toastBackground = "{{ toast_bg|escapejs }}";
+      </script>
+    {% endif %}
 {% endblock %}
+
+
