--- a/sgea/login/templates/usuarios/editar_evento.html
+++ b/sgea/login/templates/usuarios/editar_evento.html
@@ -101,5 +101,10 @@
         </div>
     </div>
 </form>
-
+{% if toast_msg %}
+    <script>
+        window.toastMessage = "{{ toast_msg|escapejs }}";
+        window.toastBackground = "{{ toast_bg|escapejs }}";
+    </script>
+{% endif %}
 {% endblock %}
