--- a/sgea/login/templates/usuarios/eventos.html
+++ b/sgea/login/templates/usuarios/eventos.html
@@ -120,4 +120,11 @@
         </div>
       </div>
   </form>
+
+  {% if toast_msg %}
+      <script>
+          window.toastMessage = "{{ toast_msg|escapejs }}";
+          window.toastBackground = "{{ toast_bg|escapejs }}";
+      </script>
+  {% endif %}
 {% endblock %}
